# heroku-py3.10-bug

./: .gitignore  Procfile  README.md  requirements.txt  setup.cfg  setup.py
import_check/: __init__.py
