[metadata]
name = xx
url = https://example.com
description = xxx
author = xxxx
author_email = xxx@example.com

[options]
packages =
    import_check

install_requires =
    Click
    Flask>=2
    Flask-Dance
    Flask-Login
    # This does not seem to be listed as a dependency but it is for Flask signals support
    # that are used by e.g flask-dance
    blinker
    PyYAML
    SQLAlchemy-Utils[encrypted,password]>=0.37.0
    SQLAlchemy[postgresql]>=1.4
    Werkzeug
    daiquiri>=3
    mailchimp3
    # setproctitle is needed for gunicorn so the Datadog agent can identify the process
    gunicorn[setproctitle,gthread]
    requests
    sentry-sdk
    stripe
    tenacity
    datadog
    ddtrace
    redis
    postmarker
    pyjwt>=2.2.0

[options.entry_points]
console_scripts =
    import-check = import_check:check
